# my-soft-raster

./: .gitignore  CMakeLists.txt  README.md  accel.cpp  accel.h  camera.h  geometry.cpp  geometry.h  light.h  main.cpp  material.cpp  material.h  model.cpp  model.h  monitor.h  object.cpp  object.h  shader.cpp  shader.h  skybox.cpp  skybox.h  tgaimage.cpp  tgaimage.h  widget.cpp  widget.h  world.cpp  world.h
